--- a/src/routes/Produtos.module.css
+++ b/src/routes/Produtos.module.css
@@ -25,3 +25,16 @@
 
 
 }
+.buttonStyle {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    margin-top: 0.5rem;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.buttonStyle:hover {
+    background-color: #0056b3;
+}
